--- a/app/assets/stylesheets/atoms/_button.sass
+++ b/app/assets/stylesheets/atoms/_button.sass
@@ -25,7 +25,7 @@
     +button-size(.75rem, 1, 1.625rem)
     font-weight: 600
   &.is-md
-    +button-size(.8125rem, 1.5, 33.8px)
+    +button-size(.8125rem, 1.5, 2.375rem)
     font-weight: 600
   &.is-lg
     +button-size(.9375rem, 1, 45px)
