--- a/app/assets/stylesheets/shared/_base.sass
+++ b/app/assets/stylesheets/shared/_base.sass
@@ -67,6 +67,7 @@ body
   body.welcome &
     max-width: 75rem
     +padding(horizontal, 1rem)
+    +margin(horizontal, auto)
 
 .columns
   max-width: 75rem
