--- a/app/assets/stylesheets/welcome/_welcome-global-nav.sass
+++ b/app/assets/stylesheets/welcome/_welcome-global-nav.sass
@@ -56,6 +56,7 @@ $welcome-global-nav-height: 4rem
   align-items: center
   justify-content: center
   transition: all .2s ease-out
+  text-decoration: none
   &:hover
     background-color: rgba(black, .4)
   +media-breakpoint-down(md)
