--- a/app/assets/stylesheets/welcome/_welcome-header-nav.sass
+++ b/app/assets/stylesheets/welcome/_welcome-header-nav.sass
@@ -19,6 +19,7 @@
   background-color: red
   border-radius: .375rem
   border: solid 2px $welcome-card-border
+  text-decoration: none
   &.is-login
     background-color: #f192aa
   &.is-company
