--- a/app/views/inquiries/_form.html.slim
+++ b/app/views/inquiries/_form.html.slim
@@ -15,6 +15,4 @@
   .auth-form-action.is-sign-up-action
     ul.auth-form-action__items
       li.auth-form-action__item
-        = f.submit "送信する", class: "a-button is-md is-warning"
-      li.auth-form-action__item
-        = link_to "キャンセル", :back, class: "a-button is-xs is-secondary"
+        = f.submit "送信する", class: "a-button is-lg is-warning is-block"
