--- a/app/views/inquiries/new.html.slim
+++ b/app/views/inquiries/new.html.slim
@@ -10,4 +10,4 @@
     nav.auth-form-nav
       ul.auth-form-nav__items
         li.auth-form-nav__item
-          = link_to "トップページ", root_path, class: "auth-form-nav__item-link"
+          = link_to "トップページ", welcome_path, class: "auth-form-nav__item-link"
