--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -13,6 +13,7 @@
     nav.auth-form-nav
       ul.auth-form-nav__items
         li.auth-form-nav__item
-          = link_to "トップページ", root_path, class: "auth-form-nav__item-link"
-        li.auth-form-nav__item
-           span.auth-form-nav__item-link.js-modal(data-target="#nda-modal") 秘密保持契約内容を確認
+          = link_to "トップページ", welcome_path, class: "auth-form-nav__item-link"
+        - if @user.adviser? || params[:training]
+          li.auth-form-nav__item
+             span.auth-form-nav__item-link.js-modal(data-target="#nda-modal") 秘密保持契約内容を確認
