--- a/app/assets/stylesheets/blocks/base/_body.sass
+++ b/app/assets/stylesheets/blocks/base/_body.sass
@@ -1,5 +1,6 @@
 html
   font-family: YakuHanJP_Narrow, -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif
+  color: $default-text
 
 body
   background-color: $background
