--- a/app/assets/stylesheets/blocks/report/_report-practices.sass
+++ b/app/assets/stylesheets/blocks/report/_report-practices.sass
@@ -21,5 +21,6 @@
   padding: .1875rem .625rem
   border-radius: 2rem
   transition: all .2s ease-in
+  text-decoration: none
   &:hover
     background-color: rgba($main, .2)
