--- a/app/views/users/practices/_completed_practices_list.html.slim
+++ b/app/views/users/practices/_completed_practices_list.html.slim
@@ -1,5 +1,5 @@
-.card-practices.is-completed
-  ul.card-practices__items
+.card-list.is-completed
+  ul.card-list__items
     - user.completed_practices.each do |practice|
-      li.card-practices__item
-        = link_to practice.title, practice, class: "card-practices__item-link"
+      li.card-list__item
+        = link_to practice.title, practice, class: "card-list__item-link"
