--- a/app/views/users/practices/_active_practices.html.slim
+++ b/app/views/users/practices/_active_practices.html.slim
@@ -2,7 +2,7 @@
   header.card-header.is-sm
     h2.card-header__title
       | 進行中のプラクティス
-  .card-practices.is-active
+  .card-list.is-active
     ul.card-practices__items
       - user.active_practices.each do |practice|
         li.card-practices__item
