--- a/app/views/users/reports/_wip_reports.html.slim
+++ b/app/views/users/reports/_wip_reports.html.slim
@@ -1,9 +1,9 @@
 .a-card
   header.card-header.is-sm
     h2.card-header__title
-      | WIPの日報
-  .card-reports.is-wip
-    ul.card-reports__items
+      | 未提出の日報
+  .card-list.is-wip
+    ul.card-list__items
       - user.reports.wip.each do |report|
-        li.card-reports__item
-          = link_to report.title, report, class: "card-reports__item-link"
+        li.card-list__item
+          = link_to report.title, report, class: "card-list__item-link"
