--- a/app/assets/stylesheets/blocks/header/_header-drop-down.sass
+++ b/app/assets/stylesheets/blocks/header/_header-drop-down.sass
@@ -73,9 +73,10 @@
   +position(fixed, left 0, top 0, right 0, bottom 0, 1)
 
 .header-notifications-item__message
-  +text-block(.8125rem 1.45 0 .25rem, $default-text)
-  +media-breakpoint-down(sm)
-    font-size: .75rem
+  p
+    +text-block(.8125rem 1.45 0 .25rem, $default-text)
+    +media-breakpoint-down(sm)
+      font-size: .75rem
 
 .header-notifications-item_created-at
   +text-block(.75rem 1, block right $default-text)
