--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -24,6 +24,7 @@ header.page-header
           = render "/users/practices/completed_practices", user: current_user
 
         .col-xs-12.col-xl-6.col-xxl-6
-          = render "users/grass", user: current_user
+          - unless current_user.total_learning_time.zero?
+            = render "users/grass", user: current_user
           - if current_user.github_account.present?
             = render "users/github_grass", user: current_user
