--- a/app/assets/stylesheets/blocks/reaction/_reaction.sass
+++ b/app/assets/stylesheets/blocks/reaction/_reaction.sass
@@ -5,10 +5,14 @@
   line-height: 2.4
   position: relative
   user-select: none
+  body.is-test &
+    display: block
 
 .reaction
   display: inline-flex
   flex-wrap: wrap
+  body.is-test &
+    display: inline-block
   &[hidden]
     display: none
   li
@@ -18,6 +22,8 @@
     justify-content: center
     padding: 0 9px 0 14px
     border-right: 1px solid $background
+    body.is-test &
+      display: inline-block
     &[hidden]
       display: none
     &.is-reacted
@@ -55,5 +61,4 @@
     li
       border-right: 1px solid #d7d7d7
       border-bottom: 1px solid #d7d7d7
-      width: 45px
-      height: 45px
+      +size(45px)
