--- a/app/assets/stylesheets/blocks/report/_learning-times.sass
+++ b/app/assets/stylesheets/blocks/report/_learning-times.sass
@@ -1,7 +1,7 @@
 .learning-times
   +padding(vertical, .75rem)
   +padding(horizontal, 2rem)
-  border-bottom: solid 1px #dadbdc
+  border-bottom: solid 1px $border
   +media-breakpoint-down(sm)
     +padding(horizontal, 1rem)
 
