--- a/app/assets/stylesheets/blocks/thread/_thread-admin-tools.sass
+++ b/app/assets/stylesheets/blocks/thread/_thread-admin-tools.sass
@@ -1,5 +1,5 @@
 .thread-admin-tools
-  border-top: solid 1px $background
+  border-top: solid 1px $border
   padding: .5rem 2rem
   +media-breakpoint-down(sm)
     +padding(horizontal, 1rem)
