--- a/app/assets/stylesheets/helpers/_state.sass
+++ b/app/assets/stylesheets/helpers/_state.sass
@@ -9,3 +9,7 @@ body
   .is-hidden-lg-up
     +media-breakpoint-up(lg)
       display: none
+
+  *[hidden],
+  .is-hidden
+    display: none !important
