--- a/app/assets/stylesheets/shared/_test.sass
+++ b/app/assets/stylesheets/shared/_test.sass
@@ -1,7 +1,11 @@
-body.is-test
+html body.is-test
   .wrapper
     height: auto
   .test-fixed-top
     +position(fixed, right 0, top 0)
   .test-fixed-bottom
     +position(fixed, right 0, bottom 0)
+  .test-inline-block
+    display: inline-block
+  .test-block
+    display: block
