--- a/app/assets/stylesheets/variables/_colors.sass
+++ b/app/assets/stylesheets/variables/_colors.sass
@@ -15,6 +15,9 @@ $side-tint: #4e6165
 $side-shade: #3a228a
 $side-active: $accent
 
+$border: #e6e6e6
+$border-shade: #d7d7d7
+
 $card-header: #819093
 
 $gray-dark: #373a3c
