--- a/app/views/reactions/_reactions.html.slim
+++ b/app/views/reactions/_reactions.html.slim
@@ -1,14 +1,14 @@
-.reactions.js-reactions data-reaction-reactionable-id=dom_id(reactionable)
-  ul.reaction.js-reaction
+.reactions.test-block.js-reactions data-reaction-reactionable-id=dom_id(reactionable)
+  ul.reactions__items.test-inline-block.js-reaction
     - Reaction.emojis.each do |kind, emoji|
-      li[*reaction_attributes(kind, reactionable)]
-        span.reaction-emoji.js-reaction-emoji = emoji
-        span.reaction-count.js-reaction-count = reactionable.reacted_count(kind)
-  .reaction-dropdown.js-reaction-dropdown
-    .reaction-dropdown-toggle.js-reaction-dropdown-toggle
-      i.fas.fa-plus
+      li.reactions__item.test-inline-block[*reaction_attributes(kind, reactionable)]
+        span.reactions__item-emoji.js-reaction-emoji = emoji
+        span.reactions__item-count.js-reaction-count = reactionable.reacted_count(kind)
+  .reactions__dropdown.js-reaction-dropdown
+    .reactions__dropdown-toggle.js-reaction-dropdown-toggle
+      i.fas.fa-plus.reactions__dropdown-toggle-plus
       i.fas.fa-smile
-    ul.reaction.js-reaction(hidden=true)
+    ul.reactions__items.test-inline-block.js-reaction(hidden=true)
       - Reaction.emojis.each do |kind, emoji|
-        li[*reaction_attributes_all(kind, reactionable)]
-          span.reaction-emoji.js-reaction-emoji = emoji
+        li.reactions__item.test-inline-block[*reaction_attributes_all(kind, reactionable)]
+          span.reactions__item-emoji.js-reaction-emoji = emoji
