リアクションのsass修正

--- a/app/assets/stylesheets/blocks/shared/_pagination.sass
+++ b/app/assets/stylesheets/blocks/shared/_pagination.sass
@@ -21,7 +21,8 @@
 .pagination__item-link
   +size(2.5rem)
   border-radius: 50%
-  +text-block(.875rem 1, flex $muted-text)
+  +text-block(.875rem 1, $muted-text)
+  +flex-link
   justify-content: center
   align-items: center
   transition: all .2s ease-in
