--- a/app/views/users/practices/_active_practices.html.slim
+++ b/app/views/users/practices/_active_practices.html.slim
@@ -3,7 +3,7 @@
     h2.card-header__title
       | 進行中のプラクティス
   .card-list.is-active
-    ul.card-practices__items
+    ul.card-list__items
       - user.active_practices.each do |practice|
-        li.card-practices__item
-          = link_to practice.title, practice, class: "card-practices__item-link"
+        li.card-list__item
+          = link_to practice.title, practice, class: "card-list__item-link"
