長文の文字設定を修正

--- a/app/assets/stylesheets/_common-imports.sass
+++ b/app/assets/stylesheets/_common-imports.sass
@@ -7,6 +7,7 @@
 @import "variables/welcome-colors"
 @import "variables/layout"
 @import "variables/text-inputs-list"
+@import "variables/fonts"
 
 ////////////
 // functions
