--- a/app/assets/stylesheets/blocks/page/_page-header.sass
+++ b/app/assets/stylesheets/blocks/page/_page-header.sass
@@ -17,6 +17,8 @@
 
 .page-header__title
   +text-block(1.25rem 1, $main 800)
+  font-feature-settings: "palt"
+  letter-spacing: .06em
   img
     +size(2.5rem auto)
     margin-right: .5rem
