--- a/app/assets/stylesheets/blocks/thread/_thread-header.sass
+++ b/app/assets/stylesheets/blocks/thread/_thread-header.sass
@@ -8,6 +8,8 @@
 
 .thread-header__title
   +text-block(1.5rem 1.4, 700)
+  font-feature-settings: "palt"
+  letter-spacing: .06em
   +media-breakpoint-down(sm)
     font-size: 1.25rem
   &.is-wip
