--- a/app/assets/stylesheets/mixins/_short-text-style.sass
+++ b/app/assets/stylesheets/mixins/_short-text-style.sass
@@ -1,4 +1,7 @@
 =short-text-style
+  text-align: justify
+  font-feature-settings: "palt"
+  letter-spacing: .03em
   >*:first-child
     margin-top: 0
   >*:last-child
