--- a/app/assets/stylesheets/mixins/_long-text-style.sass
+++ b/app/assets/stylesheets/mixins/_long-text-style.sass
@@ -17,6 +17,9 @@
 
 =long-text-style($pc-font-size: 1rem, $mobile-font-size: .8125rem, $background: $base, $font: $default-text)
   font-size: $pc-font-size
+  text-align: justify
+  font-feature-settings: "palt"
+  letter-spacing: .03em
   +media-breakpoint-down(sm)
     font-size: $mobile-font-size
   >*:first-child
