--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -27,6 +27,6 @@ header.page-header
           - unless current_user.total_learning_time.zero?
             = render "users/grass", user: current_user
           - if current_user.role == :student
-            = render "alert_account_empty", user: current_user
+            = render "incompleted_account_alert", user: current_user
           - if current_user.github_account.present?
             = render "users/github_grass", user: current_user
