有料化トップページの土台作成

--- a/app/assets/stylesheets/variables/_colors.sass
+++ b/app/assets/stylesheets/variables/_colors.sass
@@ -18,6 +18,7 @@ $side-active: $accent
 
 $border: #e6e6e6
 $border-shade: #d7d7d7
+$welcome-card-border: #5a5f60
 
 // Welcome Colors
 $welcome-default-text: #333738
