--- a/app/views/welcome/_finding_employment.slim
+++ b/app/views/welcome/_finding_employment.slim
@@ -10,4 +10,48 @@ section.welcome-section.is-finding-employment.is-yellow#finding-employment
         | 就職する就職先企業に学費を支払ってもらうという方法でこのサービスを運営しているので、就職時に学費を支払う契約を弊社と交わした企業であることが条件になりますが、
         | 学費を支払える条件だけでなく、プログラマーに理解があり、今後もプログラミングを好きでい続けられる会社を紹介します。
 
-= render "welcome/company_logos"
+    section.welcome-child-section.is-companies
+      h3.welcome-child-section__title
+        | 例えばこんな企業
+      .welcome-small-sections
+        .row.is-gutter-width-32
+          .col-xs-12.col-md-6
+            section.welcome-small-section
+              .welcome-small-section__inner
+                h3.welcome-small-section__title
+                  | PC環境が充実
+                .welcome-small-section__description
+                  p
+                    | 最新のMac、4Kディスプレイ、アーロンチェア...など。
+                    | PC環境が充実している会社はエンジニアの生産性を上げることが会社の利益にとっても良いことを理解しています。
+                    | そういった会社ではエンジニアの待遇も良いです。
+          .col-xs-12.col-md-6
+            section.welcome-small-section
+              .welcome-small-section__inner
+                h3.welcome-small-section__title
+                  | リモート勤務OK
+                .welcome-small-section__description
+                  p
+                    | IT技術者需要は今後数十年に渡って毎年増加していくが、2019年をピークに人材は減っていく予想がでています。
+                    | 優秀な技術者の重要性をわかっている企業はリモート勤務を活用して、幅広い人材を集めています。
+          .col-xs-12.col-md-6
+            section.welcome-small-section
+              .welcome-small-section__inner
+                h3.welcome-small-section__title
+                  | オープンソースコミュニティに貢献
+                .welcome-small-section__description
+                  p
+                    | オープンソース開発者を雇う。イベントのスポンサーになる。
+                    | イベントへの参加費を支給するなどといったオープンソース活動を支援している会社は会社内だけで閉じるのではなく、開かれたコミュニティーと関わることが自社の技術力を上げることを理解しています。
+                    | そういった会社ではエンジニアは技術を伸ばしていくのが当然という空気に触れることができます。
+          .col-xs-12.col-md-6
+            section.welcome-small-section
+              .welcome-small-section__inner
+                h3.welcome-small-section__title
+                  | 技術情報を発信している
+                .welcome-small-section__description
+                  p
+                    | エンジニアブログを公開していたり、イベントで技術的な発表をしているエンジニアのいる会社は技術に関してオープンで閉鎖的でない傾向があります。
+                    | その会社でしか使えない、潰しの効かないエンジニアになるのを避けることができます。
+
+= render "company_logos"
