有料化トップページの土台作成

--- a/app/assets/stylesheets/shared/_base.sass
+++ b/app/assets/stylesheets/shared/_base.sass
@@ -39,6 +39,8 @@ body
     margin-right: 0
   body.welcome &
     +margin(horizontal, 0)
+    height: auto
+    min-height: 100vh
   body.no-global-nav &
     margin-left: 0
   body.no-recent-reports &,
