--- a/app/assets/stylesheets/variables/_colors.sass
+++ b/app/assets/stylesheets/variables/_colors.sass
@@ -7,7 +7,7 @@ $background-tint: #eceeef
 $background-more-tint: #f7f7f9
 
 $default-text: #35343c
-$welcome-default-text: #5a5f60
+$welcome-default-text: #333738
 $reversal-text: white
 $muted-text: #9da4a7
 
@@ -19,6 +19,7 @@ $side-active: $accent
 
 $border: #e6e6e6
 $border-shade: #d7d7d7
+$welcome-card-border: #5a5f60
 
 $card-header: #819093
 
