--- a/app/views/welcome/_company_logos.html.slim
+++ b/app/views/welcome/_company_logos.html.slim
@@ -1,4 +1,4 @@
-section.welcome-section.is-company-logos#company-logos
+section.welcome-section.is-company-logos.is-white#company-logos
   .container
     section.welcome-child-section
       h3.welcome-child-section__title
