--- a/app/views/welcome/_finding_employment.slim
+++ b/app/views/welcome/_finding_employment.slim
@@ -1,4 +1,4 @@
-section.welcome-section.is-finding-employment#finding-employment
+section.welcome-section.is-finding-employment.is-yellow#finding-employment
   .container
     h2.welcome-section__title
       = image_tag("finding-employment-title.svg", alt: "素敵な就職先企業を紹介", class: "welcome-section__title-image")
