--- a/app/views/welcome/_other.slim
+++ b/app/views/welcome/_other.slim
@@ -1,8 +1,8 @@
-section.welcome-section.is-other#other
+section.welcome-section.is-other.is-grass#other
   .container
     h2.welcome-section__title
       = image_tag("other-title.svg", alt: "参加特典", class: "welcome-section__title-image")
-    .welcome-section__description.is-reversal
+    .welcome-section__description
       p
         | 特典って言うほどでもいいことではないかもしれないですが、年に一回の忘年会と、月に一回のミートアップに参加できます。また、空いていればオフィスも自由に使えます。
     section.welcome-child-section
