--- a/app/views/welcome/_process.slim
+++ b/app/views/welcome/_process.slim
@@ -1,8 +1,8 @@
-section.welcome-section.is-process#process
+section.welcome-section.is-process.is-space#process
   .container
     h2.welcome-section__title
       = image_tag("process-title.svg", alt: "申し込みから就職までの流れ", class: "welcome-section__title-image")
-    h3.welcome-section__sub-title.is-reversal
+    h3.welcome-section__sub-title
       | 申し込みから就職までの流れをざっくり説明。
   .container.is-md
     .welcome-small-sections.is-wide
