--- a/app/views/welcome/_tutorials.slim
+++ b/app/views/welcome/_tutorials.slim
@@ -1,10 +1,10 @@
-section.welcome-section.is-tutorials#tutorials
+section.welcome-section.is-tutorials.is-grass#tutorials
   .container
     h2.welcome-section__title
       = image_tag("tutorials-title.svg", alt: "一人でWebサービスを作って公開できることをゴールとしたカリキュラムを用意しています。", class: "welcome-section__title-image")
-    h3.welcome-section__sub-title.is-reversal
+    h3.welcome-section__sub-title
       | 一人でWebサービスを作って公開がゴール
-    .welcome-section__description.is-reversal
+    .welcome-section__description
       p
         | 最終課題が「自分で考えたWebサービスを作って公開」。それに必要な、サーバの構築からバックエンド、フロントエンドも学べます。
         | 成果物を自分のスキルの証明の一つとして持参して就職活動をしてもらいます。
