--- a/app/views/welcome/_unlimited.slim
+++ b/app/views/welcome/_unlimited.slim
@@ -19,12 +19,12 @@ section.welcome-child-section.is-unlimited
           .welcome-small-section__inner
             = image_tag("alien.svg", class: "welcome-small-section__icon")
             h3.welcome-small-section__title
-              | 性別、国籍、学歴不問
+              | 性別、国籍、学歴、年齢不問
               br
               | 基本的に誰でもOK
             .welcome-small-section__description
               p
-                | 就職を希望するのであれば、基本的に誰でも参加できます。
+                | 基本的に誰でも参加できます。ただし、カリキュラムでは日本語と英語が使われているので、日本語に不自由がなく、多少の英語が読めないと厳しいです。
       .col-xs-12.col-md-4
         section.welcome-small-section
           .welcome-small-section__inner
