--- a/app/assets/stylesheets/welcome/_welcome-faq.sass
+++ b/app/assets/stylesheets/welcome/_welcome-faq.sass
@@ -1,4 +1,4 @@
-.welcome-faq
+.faqs-item
   border: solid 2px $welcome-card-border
   background-color: $base
   padding: 1.25rem 1rem 1rem 2.5rem
@@ -7,13 +7,13 @@
   &:not(:last-child)
     margin-bottom: 2rem
 
-.welcome-faq__title
-  +text-block(1rem 1.45 0 .5rem, 600 flex)
+.faqs-item__title
+  +text-block(1.125rem 1.45 0 .5rem, 600 flex)
   align-items: baseline
   +media-breakpoint-down(sm)
     font-size: .875rem
 
-.welcome-faq__title-icon
+.faqs-item__title-icon
   height: 3rem
   width: 3rem
   margin-right: .75rem
@@ -21,5 +21,5 @@
   left: -1rem
   top: -1rem
 
-.welcome-faq__body
-  +long-text-style(.875rem, .8125rem)
+.faqs-item__body
+  +long-text-style(1rem, .8125rem)
