--- a/app/assets/stylesheets/welcome/_welcome-small-sections.sass
+++ b/app/assets/stylesheets/welcome/_welcome-small-sections.sass
@@ -23,7 +23,7 @@
 .welcome-small-sections__title
   $height: 3.25rem
   $width: 20rem
-  +text-block(1.5rem 1.45 0 1em, 700 center flex $welcome-card-border)
+  +text-block(1.5rem 1.4 0 1em, 700 center flex $welcome-card-border)
   align-items: center
   justify-content: center
   font-feature-settings: "palt"
@@ -31,12 +31,8 @@
     font-size: 1rem
   .welcome-child-section.is-unlimited &
     font-size: 1.25rem
-    color: $reversal-text
-    background-color: $welcome-main-color
-    background-image: image_url('main-visual-bg.svg')
+    background-color: $base
     background-size: 1.75rem
-    background-repeat: repeat
-    background-position: center center
     border: solid 2px $welcome-card-border
     margin-bottom: 0
     +size($width $height)
@@ -129,13 +125,13 @@
   .welcome-small-sections.is-wide &
     text-align: left
     margin-bottom: .5em
-    font-size: 1.125rem
+    font-size: 1.25rem
     +media-breakpoint-down(sm)
       text-align: center
 
 .welcome-small-section__description
   p
-    +text-block(.875rem 1.8 0 1.2em)
+    +text-block(.875rem 1.6 0 1.2em)
     +media-breakpoint-down(sm)
       font-size: .75rem
   a
