--- a/app/views/welcome/_administrator.slim
+++ b/app/views/welcome/_administrator.slim
@@ -1,14 +1,14 @@
-section.welcome-section.is-administrator#administrator
+section.welcome-section.is-administrator.is-bird#administrator
   .container
     h2.welcome-section__title
       = image_tag("administrator-title.svg", alt: "運営会社", class: "welcome-section__title-image")
-    h3.welcome-section__sub-title.is-reversal
+    h3.welcome-section__sub-title
       | 合同会社フィヨルド
-    .welcome-section__description.is-reversal
+    .welcome-section__description
       p
         | 東京の明大前駅にある合同会社フィヨルドという会社です。自社で運営しているサービスを開発しながら、お客様からお金をいただいてお客様のシステムを開発する仕事（受託開発）をしています。
     section.welcome-child-section
-      h3.welcome-child-section__title.is-reversal
+      h3.welcome-child-section__title
         | メンター
       .welcome-members
         .row.is-gutter-width-32
@@ -60,7 +60,7 @@ section.welcome-section.is-administrator#administrator
                         i.fab.fa-facebook-square
 
     section.welcome-child-section
-      h3.welcome-child-section__title.is-reversal
+      h3.welcome-child-section__title
         | 会社概要
       .welcome-child-section__description
         table
