--- a/app/views/welcome/_eligibility.slim
+++ b/app/views/welcome/_eligibility.slim
@@ -1,7 +1,6 @@
-section.welcome-section.is-eligibility#eligibility
+section.welcome-section.is-eligibility.is-wood#eligibility
   .container
     h2.welcome-section__title
       = image_tag("eligibility-title.svg", alt: "参加資格と参加条件", class: "welcome-section__title-image")
     = render "unlimited"
     = render "conditions"
-    = render "cases"
