--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,10 +1,8 @@
-- content_for :extra_body_classes, "welcome no-header no-recent-reports no-global-nav welcome-home"
+- content_for :extra_body_classes, "welcome welcome-home"
 - content_for :head_last do
   = javascript_include_tag "https://sdk.form.run/js/v2/formrun.js"
 
-= render "welcome_header"
 = render "main_visual"
-= render "welcome_global_nav"
 .welcome-sections
   = render "about"
   = render "tutorials"
@@ -13,6 +11,4 @@
   = render "finding_employment"
   = render "administrator"
   = render "other"
-  = render "faq"
   = render "form"
-= render "welcome_footer"
