ページ構成更新

--- a/app/assets/stylesheets/shared/_base.sass
+++ b/app/assets/stylesheets/shared/_base.sass
@@ -41,6 +41,7 @@ body
     +margin(horizontal, 0)
     height: auto
     min-height: 100vh
+    overflow-y: visible
   body.no-global-nav &
     margin-left: 0
   body.no-recent-reports &,
