--- a/app/assets/stylesheets/variables/_colors.sass
+++ b/app/assets/stylesheets/variables/_colors.sass
@@ -7,7 +7,6 @@ $background-tint: #eceeef
 $background-more-tint: #f7f7f9
 
 $default-text: #35343c
-$welcome-default-text: #333738
 $reversal-text: white
 $muted-text: #9da4a7
 
@@ -19,7 +18,14 @@ $side-active: $accent
 
 $border: #e6e6e6
 $border-shade: #d7d7d7
+
+// Welcome Colors
+$welcome-default-text: #333738
 $welcome-card-border: #5a5f60
+$welcome-blue: #178bff
+$welcome-yellow: #faed00
+$welcome-orange: #eda921
+$welcome-pink: #ef6085
 
 $card-header: #819093
 
