--- a/app/assets/stylesheets/welcome/_main-visual.sass
+++ b/app/assets/stylesheets/welcome/_main-visual.sass
@@ -1,5 +1,5 @@
 .main-visual
-  background-color: #178bff
+  background-color: $welcome-blue
   +media-breakpoint-down(xxl)
     height: 22rem
   +media-breakpoint-down(md)
