--- a/app/assets/stylesheets/welcome/_welcome-child-section.sass
+++ b/app/assets/stylesheets/welcome/_welcome-child-section.sass
@@ -4,7 +4,7 @@
     margin-top: 1.5rem
 
 .welcome-child-section__title
-  +text-block(1.5rem 1.45 0 .6em, 700 center $welcome-card-border)
+  +text-block(1.5rem 1.45 0 .6em, 700 center $welcome-default-text)
   font-feature-settings: "palt"
   +media-breakpoint-down(sm)
     font-size: 1rem
