--- a/app/assets/stylesheets/welcome/_welcome-footer.sass
+++ b/app/assets/stylesheets/welcome/_welcome-footer.sass
@@ -1,11 +1,10 @@
 .welcome-footer
-  background-color: #646464
   +padding(vertical, 3rem)
 
 .welcome-footer-copyright
   justify-content: center
   align-items: center
-  +text-block(.875rem 1.45, $reversal-text flex)
+  +text-block(.875rem 1.45, flex)
 
 .welcome-footer-copyright__author
   display: block
