--- a/app/assets/stylesheets/welcome/_welcome-small-sections.sass
+++ b/app/assets/stylesheets/welcome/_welcome-small-sections.sass
@@ -23,7 +23,7 @@
 .welcome-small-sections__title
   $height: 3.25rem
   $width: 20rem
-  +text-block(1.5rem 1.4 0 1em, 700 center flex $welcome-card-border)
+  +text-block(1.5rem 1.4 0 1em, 700 center flex $welcome-default-text)
   align-items: center
   justify-content: center
   font-feature-settings: "palt"
