--- a/app/views/welcome/_about.slim
+++ b/app/views/welcome/_about.slim
@@ -29,7 +29,7 @@ section.welcome-section.is-about.is-yellow#about
             .welcome-small-section__inner
               = image_tag("my-mac.svg", class: "welcome-small-section__icon")
               h3.welcome-small-section__title
-                | 実際の仕事を想定した<br>チーム開発
+                | 仕事を想定したチーム開発など<br>現場目線のカリキュラム
               .welcome-small-section__description
                 p
                   | 用意しているカリキュラムはMacを使って学習することを前提に作られています。なので、最新のOSが動くMacを持っていることが必要です。
