--- a/app/views/welcome/_process.slim
+++ b/app/views/welcome/_process.slim
@@ -3,7 +3,7 @@ section.welcome-section.is-process.is-space#process
     h2.welcome-section__title
       = image_tag("process-title.svg", alt: "申し込みから就職までの流れ", class: "welcome-section__title-image")
     h3.welcome-section__sub-title
-      | 申し込みから就職までの流れをざっくり説明。
+      | 学習の流れをざっくり説明。
   .container.is-md
     .welcome-small-sections.is-wide
       section.welcome-small-section
