--- a/app/views/welcome/pricing.html.slim
+++ b/app/views/welcome/pricing.html.slim
@@ -3,7 +3,7 @@
 .welcome-page-header
   .container
     h1.welcome-page-header__title
-      | 料金
+      = image_tag("pricing-page-title", class: "welcome-page-header__title-image")
 
 .container
   | どんな小さな羽さえもそよがぬ 弱い息のお話をせがむとは！でもこの哀れな声一つ三つあわせた舌に逆らえましょうか？居丈だかなプリマがまずは唱えるその宣告は「おはじめなさい」すこし優しげに二番手の希望
