--- a/app/assets/stylesheets/welcome/_welcome-page-header.sass
+++ b/app/assets/stylesheets/welcome/_welcome-page-header.sass
@@ -1,3 +1,6 @@
 .welcome-page-header
   background-color: #178bff
-  +padding(vertical, 1.5rem)
+  +padding(vertical, 1.125rem)
+
+.welcome-page-header__title-image
+  +size(20rem auto)
