--- a/app/views/welcome/_form.slim
+++ b/app/views/welcome/_form.slim
@@ -1,3 +1,7 @@
-section.welcome-section.is-auth-form.is-blue
-  .container#form
-    = link_to "お申込みはこちら", new_user_path, class: "welcome-section__action"
+section.welcome-actions
+  .container
+    .welcome-actions__items
+      .welcome-actions__item
+        = link_to "お問い合わせ", new_user_path, class: "welcome-actions__item-action"
+      .welcome-actions__item
+        = link_to "参加登録", new_user_path, class: "welcome-actions__item-action is-signup"
