文字設定更新

--- a/app/assets/stylesheets/blocks/page/_page-header-actions.sass
+++ b/app/assets/stylesheets/blocks/page/_page-header-actions.sass
@@ -18,6 +18,7 @@
     max-width: 50%
     &:first-child:last-child
       max-width: 100%
-  a
-    display: flex
-    width: 100%
+
+.page-header-actions__items-link.a-button
+  +media-breakpoint-up(md)
+    height: 2.125rem
