--- a/app/assets/stylesheets/blocks/thread/_thread-list-item.sass
+++ b/app/assets/stylesheets/blocks/thread/_thread-list-item.sass
@@ -82,7 +82,8 @@
     color: $muted-text
 
 .thread-list-item__sub-title
-  +text-block(.75rem 1.4 .25rem, $muted-text 400)
+  +text-block(.75rem 1.4 .25rem .25rem, $muted-text 400)
+
 
 .thread-list-item__actions
   margin-left: .5rem
