GitHubへのリンクにtarget blank追加

--- a/app/views/application/_header_links.html.slim
+++ b/app/views/application/_header_links.html.slim
@@ -26,7 +26,7 @@
               = link_to courses_path, class: "header-dropdown__item-link" do
                 | コース
             li.header-dropdown__item
-              = link_to "https://github.com/fjordllc/bootcamp/projects/1", class: "header-dropdown__item-link" do
+              = link_to "https://github.com/fjordllc/bootcamp/projects/1", class: "header-dropdown__item-link", target: "_blank" do
                 | GitHub
             - if current_user.admin?
               li.header-dropdown__item
