--- a/app/views/home/_incompleted_account_alert.html.slim
+++ b/app/views/home/_incompleted_account_alert.html.slim
@@ -1,4 +1,21 @@
-- unless user.github_account?
-  .alert_github_account GitHubアカウントが未入力です
-- unless user.slack_account?
-  .alert_slack_account Slackアカウントが未入力です
+- unless user.slack_account? || user.github_account?
+  .alert-unless-accounts
+    - unless user.slack_account?
+      span.alert-unless-accounts__item
+        | slack
+    - unless user.github_account?
+      span.alert-unless-accounts__item
+        | GitHub
+    | アカウントが未入力です。
+    = link_to "こちら", edit_current_user_path
+    | &nbsp;から入力をお願いします。
+    .alert-unless-accounts__sub
+      | （プラクティス&nbsp;
+      span.alert-unless-accounts__practice-items
+        - unless user.slack_account?
+          span.alert-unless-accounts__practice-item
+            = link_to "チャットルームに入る", "/practices/129"
+        - unless user.github_account?
+          span.alert-unless-accounts__practice-item
+            = link_to "SNSの登録", "/practices/137"
+      | &nbsp;が終わっていない方はこの通知は無視してください。）
